--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.3"
   },
   "devDependencies": {
