--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "@headlessui/react": "^2.2.4",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
@@ -23,6 +24,8 @@
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "swr": "^2.3.3"
   },
