--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "lightningcss": "^1.22.1",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
