--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
