--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-time-picker": "^7.0.0",
     "swr": "^2.3.3",
     "xlsx": "^0.18.5"
   },
