--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-time-picker": "^7.0.0",
+    "recharts": "^2.15.4",
     "swr": "^2.3.3",
     "xlsx": "^0.18.5"
   },
