--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
+    "react-countup": "^6.5.3",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
